# RT-MROS-MonitorX

./: .config  .config.old  .cproject  README.md  configuration.xml  project.uvguix.20537  project.uvoptx  rtconfig.h  rtthread.hex  rtthread.map
RT-MROS Monitorx/: .config  .config.old  .cproject  .project  SConstruct  makefile.targets  project.uvprojx  rtconfig.h  rtconfig.py
RT-MROS Monitorx/board/: Kconfig
RT-MROS Monitorx/board/lvgl/: lv_port_disp.c
RT-MROS Monitorx/ra_gen/: hal_data.c  hal_data.h  vector_data.h
RT-MROS Monitorx/script/: fsp.ld
board/: Kconfig
board/lvgl/: lv_port_indev.c
board/ports/: drv_g2d.c
catkin_ws/: README.md
catkin_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
catkin_ws/src/my_serial_node/: CMakeLists.txt
catkin_ws/src/my_turtle_pkg/: package.xml  setup.cfg  setup.py
catkin_ws/src/turtle_xy_subscriber/: package.xml  setup.cfg  setup.py
libraries/HAL_Drivers/: drv_gpio.c  drv_lcd.c  drv_spi.c
ra_cfg/fsp_cfg/: r_glcdc_cfg.h
ra_gen/: hal_data.c  hal_data.h  pin_data.c  vector_data.c
squireline file/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
squireline file/autosave/SquareLine_Project_autosave08/: SquareLine_Project.spj
squireline file/components/: Bar1.ecomp  next figure.ecomp  wifi.ecomp
squireline file/generate_file/: CMakeLists.txt  filelist.txt  ui.c  ui.h
squireline file/generate_file/fonts/: ui_font_Font1en.c
squireline file/generate_file/screens/: ui_Screen1.c  ui_Screen2.c  ui_start_menu.c
src/: hal_entry.c
(+61 files in other folders)
