<?xml version="1.0"?>
<package format="2">
  <name>turtle_xy_subscriber</name>
  <version>0.0.0</version>
  <description>ROS2 package for subscribing to turtle1/xy_coordinates</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

